Unidad-8:Kubernetes/recursos/r_deployment-lets-chat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lets-chat
  labels:
    app: lets-chat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lets-chat
  template:
    metadata:
      labels:
        app: lets-chat
    spec:
      containers:
      - name: lets-chat
        image: sdelements/lets-chat
        securityContext:
          runAsUser: 0
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
        - containerPort: 8080
