Unidad-8:Kubernetes/recursos/r_deployment-mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:4
        resources:
          limits:
            memory: "128Mi" 
            cpu: "500m" 
        ports:
        - containerPort: 27017
