Unidad-8:Kubernetes/recursos/r_deployment-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment-v1
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web-container
        image: iesgn/test_web:version1
        resources: 
          limits:
            memory: "128Mi" 
            cpu: "500m" 
        ports:
        - containerPort: 80
