Unidad-8:Kubernetes/recursos/r_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-web
  template:
    metadata:
      labels:
        app: test-web
    spec:
      containers:
        - name: test-web-container
          image: iesgn/test_web:latest
          resources:
            limits:
              memory: "128Mi" 
              cpu: "500m" 
          ports:
            - containerPort: 80
