Unidad-8:Kubernetes/recursos/r_guestbook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
  labels:
    app: guestbook
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: guestbook
      tier: frontend
  template:
    metadata:
      labels:
        app: guestbook
        tier: frontend
    spec:
      containers:
      - name: contenedor-guestbook
        image: iesgn/guestbook
        resources:
          limits:
            memory: "128Mi" 
            cpu: "500m" 
        ports:
          - name: http-server
            containerPort: 5000
