Unidad-8:Kubernetes/recursos/r_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mi-pod
  labels:
    app: servidor-web
spec:
  containers:
  - name: web-container
    image: iesgn/test_web:latest
    resources:
      limits:
        memory: "128Mi" 
        cpu: "500m" 
    ports:
    - containerPort: 80
