Unidad-8:Kubernetes/recursos/r_service-lets-chat.yml
apiVersion: v1
kind: Service
metadata:
  name: lets-chat
  labels:
    app: lets-chat
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: lets-chat
